<resources>
    <string name="app_name">RegLogApi</string>
    <string name="signup_message">Congratulations, your account has been successfully created.</string>
    <string name="retry">Retry</string>
    <string name="no_network_message">Please check your internet connection!</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="validemail">This is not an email!</string>
    <string name="welcome">Welcome!</string>
    <string name="hello">Hello There!</string>
    <string name="logintoconti">Please login to continue!</string>
    <string name="signtoconti">Please create an account!</string>
    <string name="newaccount">You need an account?</string>
    <string name="loginccount">You have an account?</string>
    <string name="profile">Profile!</string>
    <string name="regconfimation">Password doesn\'t match or Invalid email!</string>


    // Text hints
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="id">ID:</string>
    <string name="password">Password:</string>
    <string name="repassword">Repeat Password:</string>



</resources>