<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybackground"
    android:orientation="vertical"
    tools:context="com.example.ui.home.UsersInfo">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        app:cardBackgroundColor="#22333B"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintCircleRadius="@dimen/_200sdp"
         app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_reglogapplogo">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/profile"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="@string/profile" />

    <TableLayout

        android:id="@+id/table"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_150sdp"

        android:layout_marginEnd="@dimen/_13sdp"
        android:layout_marginRight="@dimen/_13sdp"
        android:background="#ffff"
        android:padding="@dimen/_20sdp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView7">


        <TableRow>

            <TextView
                android:id="@+id/userid"
                android:text="@string/id" />

            <TextView
                android:id="@+id/useriddisplay"

                tools:text="1" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/username"
                android:text="@string/name" />

            <TextView
                android:id="@+id/usernamedisplay"

                tools:text="Belal Khan" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/useremail"
                android:text="@string/email" />

            <TextView
                android:id="@+id/useremaildisplay"

                tools:text="probelalkhan@gmail.com" />

        </TableRow>

    </TableLayout>

    <Button

        android:id="@+id/userinfologoutbtn"
        style="@style/btnstyle"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/ic_buttonbg"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/table"
        app:layout_constraintStart_toStartOf="@+id/table"
        app:layout_constraintTop_toBottomOf="@+id/table"
        app:layout_constraintVertical_bias="0.008">

    </Button>

    <ProgressBar
        android:id="@+id/userinfoprogressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1sdp"
        app:layout_constraintBottom_toTopOf="@+id/table"
        app:layout_constraintEnd_toEndOf="@+id/table"
        app:layout_constraintStart_toStartOf="@+id/table" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="400dp"
        android:layout_marginRight="400dp"
        android:layout_marginBottom="864dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>