<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybackground"
    android:orientation="vertical"
    tools:context="com.example.ui.auth.Login">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:cardBackgroundColor="#22333B"
        app:layout_constraintBottom_toBottomOf="@+id/loginpassword"
        app:layout_constraintEnd_toStartOf="@+id/loginpassword"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/loginpassword">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_password">

        </ImageView>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        style="@style/iconswh"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:cardBackgroundColor="#22333B"
        app:layout_constraintBottom_toBottomOf="@+id/loginemail"
        app:layout_constraintEnd_toStartOf="@+id/loginemail"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/loginemail">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user">

        </ImageView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"

        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        app:cardBackgroundColor="#22333B"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintCircleRadius="@dimen/_200sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_reglogapplogo">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/loginprogressbar"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"

        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/loginemail"
        app:layout_constraintEnd_toEndOf="@+id/loginemail"
        app:layout_constraintStart_toStartOf="@+id/loginemail" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:text="@string/logintoconti"
        android:textColor="#96A7AF"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/welcome"
        android:textColor="@color/cardview_light_background"

        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="@string/welcome" />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:autofillHints="@string/email"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#96A7AF"
        android:textColorHint="#96A7AF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:targetApi="lollipop">

    </EditText>

    <Button
        android:id="@+id/login_btn"
        style="@style/btnstyle"
        android:background="@drawable/ic_buttonbg"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/loginpassword"
        app:layout_constraintStart_toStartOf="@+id/loginpassword"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword">

    </Button>


    <TextView
        android:id="@+id/textView"
        style="@style/smalltextstyle"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/newaccount"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn">

    </TextView>

    <TextView
        android:id="@+id/signuptext"
        style="@style/textbtnstyle"
        android:fontFamily="georgia"
        android:text="@string/signup"
        android:textColor="?attr/colorControlActivated"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView">


    </TextView>

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="24dp"


        android:backgroundTint="@android:color/holo_red_light"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:textColor="#96A7AF"
        android:textColorHint="#96A7AF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/loginemail">

    </EditText>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_380sdp"
        android:layout_marginRight="@dimen/_380sdp"
         android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>