<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybackground"
    android:orientation="vertical"
    tools:context="com.example.ui.auth.Signup">


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView"


        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        app:cardBackgroundColor="#22333B"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintCircleRadius="@dimen/_200sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_reglogapplogo">

        </ImageView>


    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_380sdp"
        android:layout_marginRight="@dimen/_380sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_27sdp"
        android:layout_marginRight="@dimen/_27sdp"
        android:text="@string/signtoconti"
        android:textColor="#96A7AF"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_27sdp"
        android:layout_marginRight="@dimen/_27sdp"
        android:text="@string/hello"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="@string/hello" />

    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewrep"
        style="@style/iconswh"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardBackgroundColor="#22333B"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password"
        app:layout_constraintEnd_toStartOf="@+id/confirm_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/confirm_password"
        app:layout_constraintVertical_bias="0.619">

        <ImageView
            android:id="@+id/imageViewrep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_password">

        </ImageView>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView

        android:id="@+id/cardVieww"
        style="@style/iconswh"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardBackgroundColor="#22333B"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/signupname"
        app:layout_constraintEnd_toStartOf="@+id/signupname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/signupname"
        app:layout_constraintVertical_bias="0.619">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_folder">

        </ImageView>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewrw"
        style="@style/iconswh"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardBackgroundColor="#22333B"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/signupemail"
        app:layout_constraintEnd_toStartOf="@+id/signupemail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/signupemail"
        app:layout_constraintVertical_bias="0.619">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/signupprogressbar"
        android:layout_width="40dp"
        android:layout_height="38dp"

        app:layout_constraintBottom_toTopOf="@+id/signupname"
        app:layout_constraintEnd_toEndOf="@+id/signupname"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="@+id/signupname" />


    <TextView
        android:id="@+id/textView3"
        style="@style/smalltextstyle"
        android:layout_marginTop="@dimen/_15sdp"

        android:fontFamily="georgia"
        android:text="@string/loginccount"
        android:textColor="#96A7AF"
        app:layout_constraintEnd_toEndOf="@+id/signupbtn"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/signupbtn"
        app:layout_constraintTop_toBottomOf="@+id/signupbtn">

    </TextView>

    <TextView
        android:id="@+id/logintxtbtn"
        style="@style/textbtnstyle"
        android:fontFamily="georgia"
        android:text="@string/login"
        android:textColor="?attr/colorControlActivated"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/signupbtn"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0">

    </TextView>

    <Button

        android:id="@+id/signupbtn"
        style="@style/btnstyle"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/ic_buttonbg"
        android:text="@string/signup"

        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="@+id/confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password">

    </Button>

    <EditText
        android:id="@+id/signupname"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint="Name:"
        android:inputType="textAutoComplete"
        android:textColor="#96A7AF"
        android:textColorHint="#96A7AF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

    </EditText>

    <EditText
        android:id="@+id/signupemail"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_54sdp"

        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint="Email:"
        android:inputType="textEmailAddress"
        android:textColor="#96A7AF"
        android:textColorHint="#96A7AF"
        app:layout_constraintEnd_toEndOf="@+id/signupname"
        app:layout_constraintStart_toStartOf="@+id/signupname"
        app:layout_constraintTop_toBottomOf="@+id/signupname">

    </EditText>

    <EditText
        android:id="@+id/signuppassword"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_10sdp"

        android:backgroundTint="@android:color/holo_red_light"
        android:hint="Password:"
        android:inputType="textWebPassword"
        android:textColor="#96A7AF"
        android:textColorHint="#96A7AF"
        app:layout_constraintStart_toStartOf="@+id/signupemail"
        app:layout_constraintTop_toBottomOf="@+id/signupemail">

    </EditText>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@android:color/holo_red_light"
        android:hint="@string/repassword"
        android:inputType="textWebPassword"
        android:singleLine="true"
        android:textColor="#96A7AF"
        android:textColorHint="#96A7AF"
        app:layout_constraintEnd_toEndOf="@+id/signuppassword"
        app:layout_constraintStart_toStartOf="@+id/signuppassword"
        app:layout_constraintTop_toBottomOf="@+id/signuppassword">

    </EditText>

    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewpass"
        style="@style/iconswh"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        app:cardBackgroundColor="#22333B"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/signuppassword"
        app:layout_constraintEnd_toStartOf="@+id/signuppassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/signuppassword"
        app:layout_constraintVertical_bias="0.619">

        <ImageView
            android:id="@+id/imageViewpass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_password">

        </ImageView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>